[gd_scene load_steps=9 format=3 uid="uid://c0ok36a5t3886"]

[ext_resource type="Script" path="res://Global.gd" id="1_21v8l"]
[ext_resource type="Texture2D" uid="uid://dbrh8vx5ctxj5" path="res://Screenshot 2024-03-26 14.04.02.png" id="1_ogybh"]
[ext_resource type="PackedScene" uid="uid://cuq2cyoqonxlo" path="res://HOBO FRONT.tscn" id="2_wotre"]
[ext_resource type="PackedScene" uid="uid://pwe6rp4acr0a" path="res://floor.tscn" id="3_rxi7o"]
[ext_resource type="Texture2D" uid="uid://506ssekvvpjy" path="res://New Piskel (3).png" id="5_jpltn"]
[ext_resource type="PackedScene" uid="uid://bfjjsa75oo4rm" path="res://enemy.tscn" id="6_da3o1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j1mt0"]
radius = 62.2896

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klxyv"]
size = Vector2(1493.5, 20)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_21v8l")

[node name="Screenshot2024-03-2614_04_02" type="Sprite2D" parent="."]
position = Vector2(576.25, 326)
scale = Vector2(1.33977, 0.749425)
texture = ExtResource("1_ogybh")

[node name="CharacterBody2D" parent="." instance=ExtResource("2_wotre")]
position = Vector2(33, 490)

[node name="Node2D" parent="." instance=ExtResource("3_rxi7o")]
position = Vector2(-135, 425)

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(1087, 533)
shape = SubResource("CircleShape2D_j1mt0")

[node name="Node2D2" parent="." instance=ExtResource("3_rxi7o")]
position = Vector2(394, 425)

[node name="Node2D3" parent="." instance=ExtResource("3_rxi7o")]
position = Vector2(883, 425)

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(484.75, 652)
shape = SubResource("RectangleShape2D_klxyv")

[node name="NewPiskel(3)" type="Sprite2D" parent="."]
position = Vector2(508, 567)
scale = Vector2(47.0313, 6.9375)
texture = ExtResource("5_jpltn")

[node name="Area2D5" parent="." instance=ExtResource("6_da3o1")]
position = Vector2(663, 489)

[connection signal="body_entered" from="Area2D4" to="." method="_on_area_2d_4_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
